This is a development build of the ARA Library 2.2.
=== PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===

Changes since previous releases:
- implementation of assertion macros changed to be consistent void expressions
  Code like "if (ARA_some_assert (someCall ()))" breaks when disabling asserts,
  so this change makes it impossible to write it.


=== ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
- finalized ARM support for Apple Silicon
- enable ARA audio file chunk authoring directly in the host


=== ARA SDK 2.0 release (aka 2.0.001) (2021/05/03) ===
- added matching object destruction customization function for all object creation functions
  This allows to use custom memory management, or to reuse already existing internal objects that
  can implement the interface for which an object is created.
- implemented reference counting for the document controller class in ARAPlug to ease dealing with
  destruction order between document controller and plug-in instances
  While the document is deleted immediately when the host destroys the controller, the controller
  itself will now be kept alive until all plug-in instances bound to it have been destroyed.
- changed default implementations of content getters for audio modifications and playback regions to
  require explicit override by user code: DocumentControllerDelegate::doIsAudioModificationContentAvailable (),
  doGetAudioModificationContentGrade (), doIsPlaybackRegionContentAvailable () and doGetPlaybackRegionContentGrade ()
  Forwarding these getters from modification to source is only appropriate for content that is not affected by the
  audio modification edit state, and and forwarding from the region to the modification is affected by the
  modification-to-playback transformation, both of which are opaque to the ARAPlug layer and therefore need to
  be implemented in derived classes. The previous behavior caused hard-to-find bugs in edge cases.