@@ -107,6 +107,8 @@ set(ARA_Library_Common_Files
     "${CMAKE_CURRENT_SOURCE_DIR}/Debug/ARAContentValidator.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/Dispatch/ARADispatchBase.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/Dispatch/ARAContentReader.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ARAChannelArrangement.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ARAChannelArrangement.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ARAStdVectorUtilities.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ARASamplePositionConversion.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/Utilities/ARATimelineConversion.h"
