@@ -18,6 +18,8 @@
 
 #include "ARAPlug.h"
 
+#include "ARA_Library/Utilities/ARAChannelArrangement.h"
+
 #include <sstream>
 
 namespace ARA {
@@ -522,6 +524,11 @@ void AudioSource::updateProperties (PropertiesPtr<ARAAudioSourceProperties> prop
     _sampleRate = properties->sampleRate;
     _channelCount = properties->channelCount;
     _merits64BitSamples = (properties->merits64BitSamples != kARAFalse);
+
+    if (properties.implements<ARA_STRUCT_MEMBER (ARAAudioSourceProperties, channelArrangement)> ())
+        doUpdateChannelArrangement (ChannelArrangement { properties->channelArrangementDataType, properties->channelArrangement });
+    else
+        doUpdateChannelArrangement (ChannelArrangement {});
 }
 
 /*******************************************************************************/
@@ -1416,6 +1423,21 @@ void DocumentController::destroyRegionSequence (ARARegionSequenceRef regionSeque
 
 /*******************************************************************************/
 
+void DocumentController::_validateAudioSourceChannelArrangement (PropertiesPtr<ARAAudioSourceProperties> properties) noexcept
+{
+    if (properties.implements<ARA_STRUCT_MEMBER (ARAAudioSourceProperties, channelArrangement)> ())
+    {
+        ARA_VALIDATE_API_ARGUMENT (properties,
+                                   (ChannelArrangement { properties->channelArrangementDataType, properties->channelArrangement }
+                                    .isValidForChannelCount (properties->channelCount)));
+    }
+    else
+    {
+        ARA_VALIDATE_API_ARGUMENT (properties, !properties.implements<ARA_STRUCT_MEMBER (ARAAudioSourceProperties, channelArrangementDataType)> ());
+        ARA_VALIDATE_API_ARGUMENT (properties, (properties->channelCount <= 2));
+    }
+}
+
 ARAAudioSourceRef DocumentController::createAudioSource (ARAAudioSourceHostRef hostRef, PropertiesPtr<ARAAudioSourceProperties> properties) noexcept
 {
     ARA_LOG_HOST_ENTRY (this);
@@ -1427,6 +1449,8 @@ ARAAudioSourceRef DocumentController::createAudioSource (ARAAudioSourceHostRef h
     auto audioSource { doCreateAudioSource (_document, hostRef) };
     ARA_INTERNAL_ASSERT (audioSource != nullptr);
 
+    _validateAudioSourceChannelArrangement (properties);
+    
     willUpdateAudioSourceProperties (audioSource, properties);
     audioSource->updateProperties (properties);
     didUpdateAudioSourceProperties (audioSource);
@@ -1455,6 +1479,8 @@ void DocumentController::updateAudioSourceProperties (ARAAudioSourceRef audioSou
         // the host may change these properties only while access is disabled
         ARA_VALIDATE_API_STATE (!audioSource->isSampleAccessEnabled ());
     }
+
+    _validateAudioSourceChannelArrangement (properties);
 
     willUpdateAudioSourceProperties (audioSource, properties);
     audioSource->updateProperties (properties);
